refactor(resource): use commons-compress to assemble zip resources
Change-Id: I54ab30c5ba751fb19780480f70d37298a17433cb